--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,13 @@ button:hover {
 .btn-container {
     display: flex;
     justify-content: center;
+    padding-bottom: 30px;
+}
+
+.btn-search {
+    font-size: 18px;
+    height: 45px;
+    width: 220px;
 }
 
 .btn-up {
@@ -525,10 +532,6 @@ main {
     color: #ffffff;
 }
 
-.search__form-input:focus {
-    border-top: 2px solid #ff5a01;
-}
-
 .tv-shows__head {
     margin: 15px 0;
 }
@@ -686,8 +689,8 @@ main {
 
 .cross {
     position: absolute;
-    top: -75px;
-    right: -75px;
+    top: -25px;
+    right: -25px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -1139,7 +1142,7 @@ main {
 
 .loading {
     position: fixed;
-    background-color: #00838f;
+    background-color: #ff5a01;
     width: 12px;
     height: 12px;
     border-radius: 3px;
@@ -1171,7 +1174,7 @@ main {
     90%, 100% {
         -webkit-transform: rotate(720deg) scale(1);
         transform: rotate(720deg) scale(1);
-        background-color: #ffc107;
+        background-color: #ff5a01;
     }
 }
 
@@ -1192,7 +1195,7 @@ main {
     90%, 100% {
         -webkit-transform: rotate(720deg) scale(1);
         transform: rotate(720deg) scale(1);
-        background-color: #ffc107;
+        background-color: #ff5a01;
     }
 }
 
@@ -1201,7 +1204,7 @@ main {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #ffc107;
+    background-color: #ff5a01;
     border-radius: 3px;
 }
 
@@ -1222,7 +1225,7 @@ main {
     70%, 100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(-360deg);
         transform: translate(0, 0) scale(1) rotate(-360deg);
-        background-color: #00838f;
+        background-color: #ff5a01;
     }
 }
 
@@ -1235,7 +1238,7 @@ main {
     70%, 100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(-360deg);
         transform: translate(0, 0) scale(1) rotate(-360deg);
-        background-color: #00838f;
+        background-color: #ff5a01;
     }
 }
 
@@ -1256,7 +1259,7 @@ div:after {
     70%, 100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(360deg);
         transform: translate(0, 0) scale(1) rotate(360deg);
-        background-color: #ffc107;
+        background-color: #ff5a01;
     }
 }
 
@@ -1269,6 +1272,6 @@ div:after {
     70%, 100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(360deg);
         transform: translate(0, 0) scale(1) rotate(360deg);
-        background-color: #00838f;
+        background-color: #ff5a01;
     }
 }
