--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,11 @@ body {
     margin: 0;
 
     background: #01050c url("../img/background.png") no-repeat top;
-    font-family: Museo Sans, Arial, sans-serif;
+    font-family: "Museo Sans", Arial, sans-serif;
     font-weight: 500;
     font-size: 16px;
     color: black;
 }
-
 
 img {
     max-width: 100%;
@@ -72,7 +71,7 @@ h4,
 p {
     padding: 0;
     margin: 0;
-    color: #ffffff
+    color: #e6e6e6
 }
 
 li {
@@ -128,6 +127,15 @@ button:hover {
     height: 40px;
     width: 100px;
     z-index: 1000;
+}
+
+.span-title {
+    /*font-size: 13px;*/
+    /*font-family: "Avantgarde", Arial, sans-serif;*/
+}
+
+.span-text {
+    font-family: "Noto Sans", Arial, sans-serif;
 }
 
 .paginator-container {
@@ -442,7 +450,7 @@ button:hover {
 }
 
 .dropdown:before {
-    font-family: FontAwesome;
+    font-family: FontAwesome, Arial, sans-serif;
     content: "\f105";
     -webkit-transition: all .4s;
     -o-transition: all .4s;
@@ -454,7 +462,7 @@ button:hover {
 }
 
 .dropdown.active:before {
-    font-family: FontAwesome;
+    font-family: FontAwesome, Arial, sans-serif;
     content: '\f107';
     -webkit-transition: all .4s;
     -o-transition: all .4s;
@@ -475,6 +483,7 @@ main {
 
 .title-wrapper {
     margin-right: 40px;
+    cursor: pointer;
 }
 
 .title {
@@ -486,6 +495,7 @@ main {
 .title__cinemax {
     font-size: 48px;
     font-weight: 900;
+    padding-left: 12px;
     text-transform: uppercase;
     color: #ff5a01;
 }
@@ -549,7 +559,9 @@ main {
 }
 
 .cards__head {
+    font-family: "Noto Sans", sans-serif;
     margin: 15px 0;
+    padding-left: 10px;
 }
 
 .cards__list {
@@ -587,7 +599,9 @@ main {
 }
 
 .card__head {
-    padding: 15px 15px 0;
+    font-family: "Noto Sans", sans-serif;
+    font-size: 15px;
+    padding: 21px 10px 0;
     max-height: 80px;
     display: -webkit-box;
     -webkit-line-clamp: 3;
@@ -600,6 +614,8 @@ main {
 
 
 .card__vote {
+    font-family: "Noto Sans", sans-serif;
+    font-size: 15px;
     position: absolute;
     top: 18px;
     text-align: center;
@@ -613,14 +629,15 @@ main {
 }
 
 .card__type {
+    font-family: "Noto Sans", sans-serif;
+    font-size: 15px;
     position: absolute;
-    bottom: 80px;
+    bottom: 75px;
     text-align: center;
     color: #FFFFFF;
     background-color: #ff5a01;
     height: 25px;
     width: 100%;
-    font-size: medium;
     font-weight: bold;
     display: inline-block;
     line-height: 25px;
@@ -713,7 +730,7 @@ main {
     top: 40px;
     left: -80px;
     width: 185px;
-    height: 278px;
+    height: 270px;
     box-shadow: 2px 2px 5px 1px rgba(200, 200, 200, 0.25);
 }
 
@@ -891,163 +908,6 @@ main {
         font-size: 42px;
     }
 
-}
-
-.preloader {
-    display: none;
-    background-color: rgba(0, 0, 0, 0.8);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 999;
-}
-
-.preloader-wrapper {
-    --skin-color: #e4c560;
-    --tap-speed: 0.6s;
-    --tap-stagger: 0.1s;
-    position: relative;
-    width: 8vw;
-    height: 6vw;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%)
-}
-
-
-.preloader:before {
-    content: "";
-    display: block;
-    width: 180%;
-    height: 75%;
-    position: absolute;
-    top: 70%;
-    right: 20%;
-    background-color: black;
-    border-radius: 4vw 1vw;
-    -webkit-filter: blur(10px);
-    filter: blur(10px);
-    opacity: 0.3;
-}
-
-.preloader-two {
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--skin-color);
-    border-radius: 1vw 4vw;
-}
-
-.preloader-three {
-    position: absolute;
-    width: 120%;
-    height: 3.2vw;
-    background-color: var(--skin-color);
-    bottom: -18%;
-    right: 1%;
-    -webkit-transform-origin: calc(100% - 2vw) 2vw;
-    -ms-transform-origin: calc(100% - 2vw) 2vw;
-    transform-origin: calc(100% - 2vw) 2vw;
-    -webkit-transform: rotate(-20deg);
-    -ms-transform: rotate(-20deg);
-    transform: rotate(-20deg);
-    border-radius: 3vw 2vw 2vw 1vw;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-    border-left: 2px solid rgba(0, 0, 0, 0.1);
-}
-
-.preloader-three:after {
-    width: 20%;
-    height: 60%;
-    content: "";
-    background-color: rgba(255, 255, 255, 0.3);
-    position: absolute;
-    bottom: -8%;
-    left: 0.5vw;
-    border-radius: 60% 10% 10% 30%;
-    border-right: 2px solid rgba(0, 0, 0, 0.05);
-}
-
-.preloader-one {
-    position: absolute;
-    width: 80%;
-    height: 3.5vw;
-    background-color: var(--skin-color);
-    bottom: 32%;
-    right: 64%;
-    -webkit-transform-origin: 100% 2vw;
-    -ms-transform-origin: 100% 2vw;
-    transform-origin: 100% 2vw;
-    -webkit-animation-duration: calc(var(--tap-speed) * 2);
-    animation-duration: calc(var(--tap-speed) * 2);
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    -webkit-transform: rotate(10deg);
-    -ms-transform: rotate(10deg);
-    transform: rotate(10deg);
-}
-
-.preloader-one:before {
-    content: "";
-    position: absolute;
-    width: 140%;
-    height: 3vw;
-    background-color: var(--skin-color);
-    bottom: 8%;
-    right: 65%;
-    -webkit-transform-origin: calc(100% - 2vw) 2vw;
-    -ms-transform-origin: calc(100% - 2vw) 2vw;
-    transform-origin: calc(100% - 2vw) 2vw;
-    -webkit-transform: rotate(-60deg);
-    -ms-transform: rotate(-60deg);
-    transform: rotate(-60deg);
-    border-radius: 2vw;
-}
-
-.preloader-one:nth-child(1) {
-    -webkit-animation-delay: 0ms;
-    animation-delay: 0ms;
-    -webkit-filter: brightness(70%);
-    filter: brightness(70%);
-    -webkit-animation-name: tap-upper-1;
-    animation-name: tap-upper-1;
-}
-
-.preloader-one:nth-child(2) {
-    -webkit-animation-delay: var(--tap-stagger);
-    animation-delay: var(--tap-stagger);
-    -webkit-filter: brightness(80%);
-    filter: brightness(80%);
-    -webkit-animation-name: tap-upper-2;
-    animation-name: tap-upper-2;
-}
-
-.preloader-one:nth-child(3) {
-    -webkit-animation-delay: calc(var(--tap-stagger) * 2);
-    animation-delay: calc(var(--tap-stagger) * 2);
-    -webkit-filter: brightness(90%);
-    filter: brightness(90%);
-    -webkit-animation-name: tap-upper-3;
-    animation-name: tap-upper-3;
-}
-
-.preloader-one:nth-child(4) {
-    -webkit-animation-delay: calc(var(--tap-stagger) * 3);
-    animation-delay: calc(var(--tap-stagger) * 3);
-    -webkit-filter: brightness(100%);
-    filter: brightness(100%);
-    -webkit-animation-name: tap-upper-4;
-    animation-name: tap-upper-4;
 }
 
 @-webkit-keyframes tap-upper-1 {
