--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,77 @@ button:hover {
     font-family: "Noto Sans", Arial, sans-serif;
 }
 
+.show-more-less {
+    border-radius: 0;
+    width: 90px;
+    height: 25px;
+    margin-left: 10px;
+}
+
+/* Rounded slider start */
+
+.switch {
+    margin-left: 7px;
+    position: relative;
+    display: inline-block;
+    width: 45px;
+    height: 25px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: var(--main-color);
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px var(--main-color);
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(19px);
+    -ms-transform: translateX(19px);
+    transform: translateX(19px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+/* Rounded slider end */
+
 .paginator-container {
     display: flex;
     justify-content: center;
@@ -458,13 +529,11 @@ button:hover {
     box-sizing: border-box;
 }
 
-
 .left-menu__list li ul li:hover {
     background: #cd4100;
     -webkit-transition: all .4s;
     -o-transition: all .4s;
     transition: all .4s;
-
 }
 
 .left-menu__list li ul li ul li {
