--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,25 @@ button:hover {
     color: white;
 }
 
+.vote-min-max-input {
+    margin-left: 7px;
+    margin-right: 7px;
+    margin-top: 4px;
+    outline: none;
+    background-color: #cacaca10;
+    color: white;
+    border: none;
+    width: 80px;
+    height: 30px;
+    padding-left: 5px;
+    border-bottom: 2px solid var(--main-color);
+}
+
+.detailed-search-movie-params {
+    /*padding-top: 5px;*/
+    /*padding-bottom: 5px;*/
+}
+
 .ds-param {
     min-width: 300px;
     width: 100%;
