--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,8 @@ button:hover {
     color: white;
 }
 
-.vote-min-max-input {
+.ds-input {
+    text-align: center;
     margin-left: 7px;
     margin-right: 7px;
     margin-top: 4px;
@@ -131,7 +132,6 @@ button:hover {
     border: none;
     width: 80px;
     height: 30px;
-    padding-left: 5px;
     border-bottom: 2px solid var(--main-color);
 }
 
@@ -251,7 +251,7 @@ button:hover {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #807e7e;
     -webkit-transition: .4s;
     transition: .4s;
 }
@@ -962,6 +962,19 @@ main {
     border-radius: 10px;
 
 }
+
+/*REMOVE ARROWS FROM INPUT FIELD*/
+/* Chrome, Safari, Edge, Opera */
+/*input::-webkit-outer-spin-button,*/
+/*input::-webkit-inner-spin-button {*/
+/*    -webkit-appearance: none;*/
+/*    margin: 0;*/
+/*}*/
+
+/* Firefox */
+/*input[type=number] {*/
+/*    -moz-appearance: textfield;*/
+/*}*/
 
 @media (max-width: 1024px) {
     .container {
