--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,7 @@
 */
 
 :root {
-    /*--main-color: #ff4800;*/
-    --main-color: #ff5a01;
+    --main-color: #d05614;
 }
 
 @font-face {
@@ -99,7 +98,7 @@ button:focus {
 }
 
 button:hover {
-    background-color: #e14800;
+    background-color: #b34a10;
     border-color: transparent;
 }
 
@@ -121,10 +120,17 @@ button:hover {
     color: white;
 }
 
+.param-small-title {
+    font-weight: 600;
+    font-size: 18px;
+    color: #e4e4e4;
+    margin-top: 7px;
+}
+
 .ds-input {
     text-align: center;
-    margin-left: 7px;
-    margin-right: 7px;
+    margin-left: 3px;
+    margin-right: 3px;
     margin-top: 4px;
     outline: none;
     background-color: #cacaca10;
@@ -550,7 +556,7 @@ input:checked + .slider:before {
 }
 
 .left-menu__list li ul li:hover {
-    background: #cd4100;
+    background: #b14d14;
     -webkit-transition: all .4s;
     -o-transition: all .4s;
     transition: all .4s;
@@ -562,7 +568,7 @@ input:checked + .slider:before {
 }
 
 .left-menu__list li ul li ul li a span {
-    color: #cd4100;
+    color: #ca4f0d;
 }
 
 .left-menu__list li ul li ul li:hover {
@@ -849,7 +855,7 @@ main {
 
 .modal__description {
     overflow-y: auto;
-    max-height: 400px;
+    max-height: 500px;
 }
 
 .modal__description section {
@@ -1024,7 +1030,6 @@ main {
         overflow-y: auto;
         max-height: 400px;
         padding: 30px;
-        border-width: 16px;
     }
 
     .modal__description {
@@ -1230,7 +1235,7 @@ main {
 
 .loading {
     position: fixed;
-    background-color: #ff5a01;
+    background-color: var(--main-color);
     width: 12px;
     height: 12px;
     border-radius: 3px;
@@ -1262,7 +1267,7 @@ main {
     90%, 100% {
         -webkit-transform: rotate(720deg) scale(1);
         transform: rotate(720deg) scale(1);
-        background-color: #ff5a01;
+        background-color: var(--main-color);
     }
 }
 
@@ -1283,7 +1288,7 @@ main {
     90%, 100% {
         -webkit-transform: rotate(720deg) scale(1);
         transform: rotate(720deg) scale(1);
-        background-color: #ff5a01;
+        background-color: var(--main-color);
     }
 }
 
@@ -1292,7 +1297,7 @@ main {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #ff5a01;
+    background-color: var(--main-color);
     border-radius: 3px;
 }
 
@@ -1313,7 +1318,7 @@ main {
     70%, 100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(-360deg);
         transform: translate(0, 0) scale(1) rotate(-360deg);
-        background-color: #ff5a01;
+        background-color: var(--main-color);
     }
 }
 
@@ -1326,7 +1331,7 @@ main {
     70%, 100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(-360deg);
         transform: translate(0, 0) scale(1) rotate(-360deg);
-        background-color: #ff5a01;
+        background-color: var(--main-color);
     }
 }
 
@@ -1347,7 +1352,7 @@ div:after {
     70%, 100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(360deg);
         transform: translate(0, 0) scale(1) rotate(360deg);
-        background-color: #ff5a01;
+        background-color: var(--main-color);
     }
 }
 
@@ -1360,6 +1365,6 @@ div:after {
     70%, 100% {
         -webkit-transform: translate(0, 0) scale(1) rotate(360deg);
         transform: translate(0, 0) scale(1) rotate(360deg);
-        background-color: #ff5a01;
+        background-color: var(--main-color);
     }
 }
